--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
 .navTop_list{
     width: 12%;
 }
+
+
 .navTop_items{
     display: flex;
     list-style-type: none;
@@ -24,6 +26,13 @@
     text-decoration: none;
     color: black;
     font-weight: 500;
+}
+.navTop_list li:hover{
+    transform: scale(1.5);
+}
+.navTop_items a:hover{
+    color: gold;
+    text-shadow: 1px 1px 1px black;
 }
 .navMenu{
     position: relative;
@@ -43,6 +52,13 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+.navMenu_list li:hover{
+    transform: scale(1.5);
+}
+.navMenu_items a:hover{
+    color: gold;
+    text-shadow: 1px 1px 1px black;
+}
 .navMenu_items{
     position: absolute;
     display: flex;
@@ -53,6 +69,9 @@
     margin-left: -18%;
 }
 /* main */
+.main{
+    background-color: rgba(128, 128, 128, 0.13);
+}
 .banner{
     display: block;
     text-align: center;
@@ -94,10 +113,11 @@
 
 }
 /*galeria*/
-.galeria{ 
+.galeria{
     text-align: center;
 }
 .galeriaCont{
+    background-color: white;
     padding: 50px 100px 360px 250px;
     gap: 20px;
     font-size: 50px;
@@ -108,7 +128,7 @@
 .box1{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    height: 346%;
+    height: 335%;
     width: 100%;
     background-color: rgba(128, 128, 128, 0.103);
     background-image: url(../multimedia/img/aloe.jpg);
@@ -146,7 +166,7 @@
 }
 .box2{
     background-image: url(../multimedia/img/3macetas.webp);
-    grid-column: 2 / 3; 
+    grid-column: 2 / 3;
     grid-row: 1 / 3;
     height: 200%;
     width: 60%;
@@ -162,7 +182,7 @@
     background-image: url(../multimedia/img/aloeventana.webp);
     grid-column: 3 / 4;
     grid-row: 1 / 2;
-    height: 750%;
+    height: 770%;
     width: 60%;
     padding: 49px 0px 0px 50px;
     background-position: 30%;
@@ -172,9 +192,9 @@
 .box4{
     position: relative;
     grid-column: 2 / 4;
-    margin-top: 22%;
-    height: 126%;
-    width: 71%;
+    margin-top: 18%;
+    height: 134%;
+    width: 72%;
     background-image: url(../multimedia/img/terrario00.jpg);
     background-position-y: 80%;
     background-repeat: no-repeat;
@@ -195,36 +215,45 @@
 /*carrusel*/
 .productos{
     position: relative;
-
 }
 .productos h1{
     text-transform: uppercase;
     position: absolute;
     left: 50%;
     top: 5%;
-    
+    text-shadow: 1px 2px 4px black;
+
 }
-.carrusel{
+.producth1{
+    color: burlywood;
+    text-shadow: 1px 2px 4px black;
+}
+.carrusel{  
+    margin: 0px 50px 0px 500px;
+    width: 60%;
     position: relative;
     text-align: center;
     display: flex;
-    flex-wrap: nowrap;
-    overflow: scroll;
-    background-color: rgba(128, 128, 128, 0.13);
+    overflow-y: scroll;
 }
-
+.carruselimg{
+    width: 100%;
+    object-fit: contain;
+}
 .carrusel_elemento{
-    flex: 1 0 auto;
-    margin: 100px 150px;
+    margin: 100px 50px 50px 50px;
     border: 1px solid white;
     background-color: white;
-    width: 200px;
-    height: 280px;
-    box-shadow: 7px 7px 2px rgba(0, 0, 0, 0.178);
+    width: 350px;
+    height: 350px;
+    box-shadow: 7px 7px 2px rgba(0, 0, 0, 0.5);
 }
-.carrusel_elemento img{
+.carrusel_elemento p{
+    margin-top: 20%;
+}
+.carruselimg{
     width: 200px;
-    height: 170px;
+    height: 180px;
 }
 .carrusel_elemento a{
     text-decoration: none;
@@ -232,4 +261,61 @@
     font-weight: 700;
     color: gold;
     text-shadow: 0px 2px 2px black;
+}
+/*informacion*/
+.informacion{
+    height: 35vh;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.informacion_video{
+    /* border: 1px solid blue; */
+    width: 50%;
+}
+.informacion_video iframe{
+    width: 100%;
+    height: 100%;
+}
+.informacion_us{
+    width: 50%;
+    background-image: url(../multimedia/img/madera.webp);
+    /* border: 1px solid black; */
+    display: block;
+    text-align: start;
+}
+.informacion_us h1{
+    text-align: center;
+    position: absolute;
+    margin-left: 10%;
+}
+.us_H1{
+    color: burlywood;
+    text-shadow: 1px 2px 4px black;
+}
+.informacion_p1{
+    width: 50%;
+    margin-left: 20%;
+    margin-top: 10%;
+}
+.informacion_p2{
+    width: 50%;
+    margin-left: 20%;
+    margin-top: 2%;
+}
+.us_btn{
+    position: absolute;
+    margin-left: 10%;
+    margin-top: 25px;
+    padding: 5px;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    background-color: burlywood;
+    text-shadow: 1px 2px 2px black;
+    box-shadow: 4px 5px 5px black;
+    width: px;
 }
